--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>j360-netty-agent</module>
         <module>j360-netty-udp</module>
         <module>j360-netty-core</module>
+        <module>j360-netty-nio</module>
     </modules>
     
     <properties>
